Added a map layer

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@openapitools/openapi-generator-cli": "^1.0.18-4.2.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -13,9 +15,11 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
     "keycloak-js": "^11.0.2",
+    "leaflet": "^1.7.1",
     "localized-strings": "^0.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
@@ -46,6 +50,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8"
+    "@types/react-dom": "^16.9.8",
+    "@types/react-leaflet": "^2.5.2"
   }
 }
