--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@openapitools/openapi-generator-cli": "^1.0.18-4.2.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -17,6 +18,7 @@
     "keycloak-js": "^11.0.2",
     "leaflet": "^1.7.1",
     "localized-strings": "^0.2.4",
+    "nominatim-browser": "^2.1.0",
     "polyline-encoded": "0.0.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
