--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,6 +14,7 @@ steps:
   - -c
   - |
     npm install
+    npm run build
     if [ -n "${_DEPLOYMENT}" ]; then
       apt update && apt install -y unzip &&
       curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip" &&
