--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
   args:
   - -c
   - |
-    npm install
+    npm install &&
     npm run build
     if [ -n "${_DEPLOYMENT}" ]; then
       apt update && apt install -y unzip &&
