--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,6 +10,8 @@ steps:
     - "REACT_APP_KEYCLOAK_CLIENT_ID=${_REACT_APP_KEYCLOAK_CLIENT_ID}"
     - "REACT_APP_KEYCLOAK_REALM=${_REACT_APP_KEYCLOAK_REALM}"
     - "REACT_APP_KEYCLOAK_URL=${_REACT_APP_KEYCLOAK_URL}"
+    - "REACT_APP_OTP_URL=${_REACT_APP_OTP_URL}"
+    - "REACT_APP_NOMINATIM_URL=${_REACT_APP_NOMINATIM_URL}"
   args:
   - -c
   - |
