--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/react-geocode": "^0.2.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/recharts": "^1.8.16",
     "@types/redux": "^3.6.0",
     "keycloak-js": "^11.0.2",
     "leaflet": "^1.7.1",
+    "leaflet-control-geocoder": "^2.2.0",
     "localized-strings": "^0.2.4",
     "moment": "^2.29.1",
     "nominatim-browser": "^2.1.0",
     "polyline-encoded": "0.0.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-geocode": "^0.2.3",
     "react-leaflet": "^2.7.0",
     "react-leaflet-heatmap-layer": "^2.0.0",
     "react-modern-calendar-datepicker": "^3.1.6",
