--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/leaflet": "^1.5.19",
     "@types/node": "^12.0.0",
     "@types/react-geocode": "^0.2.0",
     "@types/react-redux": "^7.1.9",
